# lgl-scxctl-manager

./: CHANGELOG.md  CMakeLists.txt  README.md  lgl-scxctl-manager.desktop  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  scxctl-manager.desktop
.github/workflows/: flawfinder.yml
packaging/: com.linuxgamerlife.lgl-scxctl-manager.metainfo.xml  lgl-scxctl-manager.spec
